# ai-orchestrator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  pyproject.toml
examples/: task.md
examples/sample-run/: state.yaml  task.md
examples/sample-run/iterations/0/: approved_prompt.md  iteration_state.yaml  planner_response.json
orchestrator/cli/: main.py
orchestrator/executor/: base.py  cli_executor.py
orchestrator/jobs/: models.py  runner.py
orchestrator/memory/: manager.py
orchestrator/planner/: direct_planner.py  openai_planner.py
orchestrator/storage/: store.py
orchestrator/ui/: review.py
orchestrator/utils/: config.py  git.py  safety.py  validation.py
orchestrator/web/: server.py
orchestrator/web/templates/: base.html  index.html  run.html
prompts/: build-orchestrator.md  dogfood-01.md  handoff.md
scripts/: smoke_test_codex.py
tests/: test_active_objective.py  test_direct_prompt.py  test_executor_provider.py  test_memory.py  test_packaging.py  test_run_resilience.py  test_stale_prompt_fix.py  test_tiny_loop_executor_provider.py  test_validation.py  test_validation_grounding.py  test_validation_truthfulness.py
tiny_loop/: README.md  __main__.py  artifacts.py  claude_runner.py  executor_adapter.py  git_helpers.py  prompts.py  reviewer.py  run.py  state.py
